# assistente-vendas-ai

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  reqiurements.txt
api/: Dockerfile  app.py  requirements.txt
petlove_agents/: .gitignore  app.py  pyproject.toml  requirements.txt
petlove_agents/chroma_db/: chroma.sqlite3
petlove_agents/kb_utils/chroma_db/: chroma.sqlite3
petlove_agents/kb_utils/database/: database.py  products.json
petlove_agents/kb_utils/embeddings/: check_collections.py  chroma_config.py  ingest_products.py  vectorizer.py
petlove_agents/kb_utils/embeddings/chroma_db/: chroma.sqlite3
petlove_agents/src/petlove_agents/: crew.py  main.py
petlove_agents/src/petlove_agents/config/: agents.yaml  tasks.yaml
petlove_agents/src/petlove_agents/tools/: custom_tool.py
src/crewai/petlove_agents/: README.md  pyproject.toml
src/crewai/petlove_agents/src/petlove_agents/: crew.py  main.py
src/crewai/petlove_agents/src/petlove_agents/config/: agents.yaml  tasks.yaml
src/crewai/petlove_agents/src/petlove_agents/tools/: custom_tool.py
src/database/: database.py
src/embeddings/: chroma_config.py  ingest_products.py
