[project]
name = "petlove_agents"
version = "0.1.0"
description = "petlove-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
petlove_agents = "petlove_agents.main:run"
run_crew = "petlove_agents.main:run"
train = "petlove_agents.main:train"
replay = "petlove_agents.main:replay"
test = "petlove_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
